# oracleforge

./: .claudeignore  .gitignore  AUDIT_BUDGETFORGE_EXECUTIVE_SUMMARY.md  AUDIT_BUDGETFORGE_PHASE1.md  AUDIT_BUDGETFORGE_PHASE2.md  AUDIT_BUDGETFORGE_PHASE3_6.md  CLAUDE.md  HANDOFF.md  LICENSE  PLAN_CORRECTION_BUDGETFORGE.md  PLAN_SESSIONS_API.md  README.md  réparation.txt
.claude/: settings.local.json
authforge/: LICENSE  README.md  docker-compose.yml
authforge/backend/: .coverage  .env.example  main.py  requirements.txt
backend/: .env.example  main.py  requirements.txt
backend/api/: routes_health.py  routes_price.py  routes_sources.py
backend/core/: __init__.py  auth.py  config.py  database.py  disclaimer.py  http_client.py  rate_limit.py
backend/mcp_server/: README.md  server.py
backend/routes/: prices.py
backend/services/: price_engine.py
backend/tests/: conftest.py  test_phase3_api.py  test_phase4_db.py  test_phase4_x402.py  test_phase5_mcp.py  test_price_engine.py  test_routes.py
backend/x402/: base_verifier.py  middleware.py
budgetforge/: HANDOFF.md  README.md  a dire.txt  audit24042025.txt  plan-pourfinir.md  qa_golden_path.py  test_sdk.py  test_sdk_minimal.py
budgetforge/backend/: .env.example  .env.prod.example  main.py  requirements.txt
budgetforge/dashboard/: README.md  next.config.js  next.config.ts  package.json  proxy.ts  tailwind.config.js  test-setup.js  tsconfig.json
budgetforge/docs/: api-reference.md  audit-qa-senior-2026-04-25.md  aws-bedrock-README.md  aws-bedrock-integration.md  deployment-guide.md  investigation-prod-2026-04-25.md  openapi.json  openapi.yaml  plan-budgetforge-v2.md  plan-correction-audit-2026-04-25.md  proxy-refactor-summary.md  quickstart.md  session-resume-2026-04-23.md  session_corrections_budgetforge_2026-04-23.md
budgetforge/examples/: aws-bedrock-examples.py
budgetforge/landing/: index.html
budgetforge/langchain_budgetforge/: __init__.py  budgetforge_chat.py  budgetforge_chat_minimal.py  budgetforge_chat_simple.py  budgetforge_llm.py  budgetforge_llm_minimal.py  budgetforge_llm_simple.py  setup.py
budgetforge/sdk/: README.md  budgetforge_sdk.py  example_usage.py  setup.py  test_sdk_integration.py  test_sdk_unit.py
budgetforge/tools/: aws-bedrock-monitoring.py
dataforge/: README.md
docs/: 2026-04-12-forge-suite-design.md  BACKLOG.md  audit-report-2026-04-12.md  guardforge-handover-2026-04-13.md  guardforge-plan.md  harness-prune-2026-04-13.md  maxia-lab-overview-archive.md  next-session-todo.md  phase5_mcp_extraction.md  plan-argent-2026-04-21.md  resources.md  security_audit_extraction.md  source_audit.md
docs/archive/: plan-2026-04-13-OBSOLETE.md
forge-suite/dashboard/: package-lock.json  package.json
guardforge/: HANDOFF.md  LICENSE  README.md  docker-compose.yml
guardforge/backend/: .coverage  .env.example  main.py  requirements.txt
guardforge/dashboard/: .env.example  package-lock.json  package.json
guardforge/deploy/: deploy.sh  guardforge-backend.service  guardforge-dashboard.service
guardforge/docs/: LIMITATIONS.md
guardforge/marketing/: LAUNCH_DRAFTS.md  README.md  README_OSS.md  compare.html  index.html  vercel.json
guardforge/sdk/python/: README.md  pyproject.toml
guardforge/sdk/python/guardforge/: __init__.py  _lazy.py  anthropic_wrapper.py  client.py  openai_wrapper.py
guardforge/sdk/python/tests/: test_client.py  test_openai_wrapper.py
identityforge/: README.md
llmforge/: LICENSE  README.md  docker-compose.yml
llmforge/backend/: .env.example  main.py  requirements.txt
maxia-hub/: audit-ia.html  freeai.html  guardforge.html  index.html
memoryforge/: README.md
missionforge/: .gitignore  LICENSE  README.md  docker-compose.yml
missionforge/backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
missionforge/backend/alembic/: env.py
missionforge/backend/alembic/versions/: 3ab40eb0319f_initial_schema.py
missionforge/backend/core/: config.py  database.py  models.py
missionforge/backend/mcp_server/: server.py  tools.py
missionforge/backend/routes/: chat.py  llm.py  mcp.py  missions.py  observability.py
missionforge/backend/services/: llm_router.py  memory.py  mission_engine.py  rag_service.py
missionforge/backend/tests/: conftest.py  test_auth_middleware.py  test_config.py  test_config_fixes.py  test_database.py  test_integration.py  test_llm_router.py  test_llm_routes.py  test_mcp_server.py  test_memory.py  test_migrations.py  test_mission_engine.py  test_package.py  test_rag_service.py  test_run_history_persistence.py
missionforge/dashboard/: Dockerfile  package-lock.json  package.json
missionforge/deploy/: deploy.sh  missionforge.service  nginx-missionforge.conf
missionforge/landing/: index.html
oracleforge/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  smithery.yaml
oracleforge/backend/: .env.example  __init__.py  main.py  requirements.txt
oracleforge/docs/: CGV.md  next-session-prompt-phase6.md  next-session-prompt.md  phase4_extraction_audit.md  phase6_sdk_plugins.md  plan-maxia-oracle-2026-04-14.md  show-hn-draft.md  social-drafts.md  v1.1_chainlink_multichain.md  v1.2_x402_multichain.md  v1.3_redstone_eliza_pyth_solana.md  v1.4_pyth_solana_receiver.md  v1.5_uniswap_twap.md  v1.8_historical_prices.md
oracleforge/landing/: index.html  llms.txt  nginx-oracle-offline.conf  nginx-oracle.conf  og-gen.py  openapi.json  (+3 more)
oracleforge/plugins/autogen-maxia-oracle/: README.md  pyproject.toml
oracleforge/plugins/autogen-maxia-oracle/src/autogen_maxia_oracle/: __init__.py  tools.py
oracleforge/plugins/autogen-maxia-oracle/tests/: test_tools.py
oracleforge/plugins/langchain-maxia-oracle/: README.md  pyproject.toml
oracleforge/plugins/langchain-maxia-oracle/src/langchain_maxia_oracle/: __init__.py  tools.py
oracleforge/plugins/langchain-maxia-oracle/tests/: test_tools.py
outreachforge/: .gitignore  LICENSE  README.md  docker-compose.yml
relayforge/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/maxia_oracle/: client.py  mcp_bridge.py
(+472 files in other folders)
