[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxia-oracle"
version = "0.1.0"
description = "Multi-source price data feed for AI agents. Data feed only. Not investment advice. No custody. No KYC."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MAXIA", email = "ceo@maxiaworld.app" },
]
keywords = [
    "maxia",
    "oracle",
    "price-feed",
    "crypto",
    "agents",
    "ai-agents",
    "mcp",
    "model-context-protocol",
    "x402",
    "pyth",
    "chainlink",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    "mcp>=1.27.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.26,<1",
]

[project.urls]
Homepage = "https://oracle.maxiaworld.app"
Documentation = "https://oracle.maxiaworld.app/docs"
Repository = "https://github.com/maxiaworld/oracleforge"

[project.scripts]
maxia-oracle-mcp = "maxia_oracle.mcp_bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maxia_oracle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/maxia_oracle",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
