[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-maxia-oracle"
version = "0.1.9"
description = "AutoGen tool wrappers for MAXIA Oracle — multi-source price feeds for AI agents. Data feed only."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MAXIA", email = "ceo@maxiaworld.app" },
]
keywords = [
    "autogen",
    "autogen-core",
    "maxia",
    "oracle",
    "price-feed",
    "crypto",
    "pyth",
    "chainlink",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "maxia-oracle>=0.1.0,<1",
    "autogen-core>=0.4,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[project.urls]
Homepage = "https://oracle.maxiaworld.app"
Documentation = "https://oracle.maxiaworld.app/docs"
Repository = "https://github.com/maxiaworld/oracleforge"
Issues = "https://github.com/maxiaworld/oracleforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_maxia_oracle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/autogen_maxia_oracle",
    "README.md",
    "pyproject.toml",
]
