[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-maxia-oracle"
version = "0.8.0"
description = "LangChain tool wrappers for MAXIA Oracle — multi-source price feeds for AI agents. Data feed only."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MAXIA", email = "ceo@maxiaworld.app" },
]
keywords = [
    "langchain",
    "maxia",
    "oracle",
    "price-feed",
    "crypto",
    "pyth",
    "chainlink",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "maxia-oracle>=0.1.0,<1",
    "langchain-core>=0.3,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.urls]
Homepage = "https://oracle.maxiaworld.app"
Documentation = "https://oracle.maxiaworld.app/docs"
Repository = "https://github.com/maxiaworld/oracleforge"
Issues = "https://github.com/maxiaworld/oracleforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_maxia_oracle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/langchain_maxia_oracle",
    "README.md",
    "pyproject.toml",
]
